--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link rel="icon" href="./images/etch-a-sketch.png">
 </head>
 
 <body>
-
-    <form>
-        <label for="gridSize">GRID SIZE</label></br>
-        <input type="number" id="gridSize" placeholder="test"></input>
-        <input type="submit" value="Submit" id="submits" onclick="test()"></input>
+    
+    <form class="setSizeForm">
+        <label for="gridSize" id="testlabel">GRID SIZE -></label></br>
+        <input type="number" id="gridSize" value="16" min="0" max="64"/>
+        <a type="submit" href="#" id="submits" onclick="test()">Set size</a>
     </form>
 
     <div class="mainDiv"></div>
